@@ -54,6 +54,7 @@ Version 0.0.4b (in progress)
 * [Fixed] CSS for cookie consent popup.
 * [Added] Laying the groundwork for automated updates.
 * [Fixed] Error when attempting to access roster.php directly.
+* [Changed] Team rosters are no longer automatically deleted when stats are reset.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
